--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body
 {
   background: black !important;
-  font-family: 'Gloria Hallelujah', cursive !important;
+  font-family: 'Inconsolata', monospace !important;
   color: #777;
 }
 
