--- a/main.css
+++ b/main.css
@@ -1,27 +1,26 @@
 /*text and main stuff*/
 
 body{
-  background: black !important;
+  background: #f2f2f2 !important;
   font-family: 'Inconsolata', monospace !important;
-  color: #777;
+  color: #404040;
 }
 
 
 .x{
   text-align: left;
-  font-family: 'Nunito Sans', sans-serif;
 }
 
 .y{
-  font-family: 'PT Sans Caption', sans-serif;
+  font-family: 'Muli', sans-serif;
 }
 
 .z{
-  font-family: 'Merriweather Sans', sans-serif;
+  font-family: 'Muli', sans-serif;
 }
 
 .a{
-  font-family: 'Muli', sans-serif; 
+  font-family: 'Muli', sans-serif;
   font-size: 130%;
   /*width: 800px;*/
   text-align: center;
@@ -29,24 +28,29 @@ body{
 
 p{
   text-align: center;
+  font-family: 'Muli', sans-serif;
+  color: #404040;
 }
 
 h1{
   margin: 10px 0 30px 0;
-  letter-spacing: 10px;      
+  font-family: 'Muli', sans-serif;
+  letter-spacing: 2px;
   font-size: 30px;
-  color: #ffffff;
+  color: #404040;
 }
 
 h3, h4{
   margin: 10px 0 30px 0;
-  letter-spacing: 10px;      
+  letter-spacing: 2px;
   font-size: 20px;
-  color: #ffffff;
+  color: #404040;
 }
 
 .classes{
   padding-left: 2cm;
+  font-family: 'Muli', sans-serif;
+  color: #404040;
 }
 
 .project{
@@ -58,7 +62,7 @@ h3, h4{
 }
 
 .project:hover{
-  border-color: #dfdfdf;
+  border-color: red;
   opacity: 1;
 }
 
@@ -70,7 +74,7 @@ h3, h4{
 
 .bg-1
 {
-  background: #2d2d30;
+  background: white;
   color: #bdbdbd;
 }
 
@@ -78,18 +82,18 @@ h3, h4{
 
 .prof
 {
-  font-family: 'Ubuntu', sans-serif !important;
+  font-family: 'Muli', sans-serif;
 }
 
 .nav-tabs li a
 {
-  color: #777;  
+  color: #777;
 }
 
 .navbar
 {
   margin-bottom: 0;
-  background-color: #2d2d30;
+  background-color: #d7b3ff;
   border: 0;
   font-size: 14px !important;
   letter-spacing: 4px;
@@ -97,19 +101,20 @@ h3, h4{
 }
 
 .navbar li a, .navbar .navbar-brand
-{ 
-  color: #d5d5d5 !important;
+{
+  color: white !important;
 }
 
 .navbar-nav li a:hover
 {
-  color: #fff !important;
+  color: #555 !important;
+  background-color: #744d25;
 }
 
 .navbar-nav li.active a
 {
-  color: #fff !important;
-  background-color: #29292c !important;
+  color: #ca99ff !important;
+  background-color: #555 !important;
 }
 
 .navbar-default .navbar-toggle
@@ -120,7 +125,7 @@ h3, h4{
 
 footer
 {
-  background-color: #2d2d30;
+  background-color: #f2f2f2;
   color: #f5f5f5;
   padding: 32px;
 }
@@ -134,7 +139,7 @@ footer a:hover
 {
   color: #777;
   text-decoration: none;
-}  
+}
 
 .form-control
 {
@@ -170,6 +175,7 @@ p.w {
 
 img.icons {
   border-radius: 50%;
+  border: 2px #555 solid;
   -webkit-transition: -webkit-transform .8s ease-in-out;
           transition:         transform .8s ease-in-out;
 }
