--- a/main.css
+++ b/main.css
@@ -181,8 +181,8 @@ img.icons {
 }
 
 img.icons:hover {
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
+  -webkit-transform: rotate(360deg) scale(1.25);
+          transform: rotate(360deg) scale(1.25);
 }
 
 .sun {
