--- a/main.css
+++ b/main.css
@@ -155,16 +155,22 @@ textarea
     border-radius: 50%;
 }
 
+.home-image {
+    border-radius: 50%;
+    width: 40vw;
+    height: 30vw;
+}
+
 .divider{
     width:100px;
     height:auto;
 }
 
-p.w {
+p.hobbies {
 /*    height: 200px;
     width: 500px;*/
-    padding-left: 4cm;
-    width: 800px;
+    padding-left: 15vw;
+    width: 50vw;
     text-align: left;
 }
 
