--- a/main.css
+++ b/main.css
@@ -2,7 +2,14 @@
 
 .part {
   height: 100vh;
-  /* padding: 80px 120px; */
+  padding: 20px;
+  margin: auto;
+}
+
+.big-part {
+  min-height: 100vh;
+  padding: 20px;
+  padding-bottom: 40px;
   margin: auto;
 }
 
@@ -136,7 +143,7 @@ img.icons:hover {
 
 p.hobbies {
   margin: auto;
-  width: 36vw;
+  width: 37vw;
   text-align: left;
 }
 
