--- a/main.css
+++ b/main.css
@@ -132,23 +132,28 @@ img.icons:hover {
 .all-projects {
   margin: auto;
   margin-bottom: 50px;
-  width: 90%;
+  width: 70vw;
   text-align: center;
 }
 
 .card {
-  background: white;
+  color: black;
+  background: #e6e6e6;
   display: inline-block;
-  height: 400px;
+  height: 300px;
   width: 300px;
   text-align: left;
   margin: 25px;
   border-radius: 2%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card h5 {
+  font-size: 20px;
 }
 
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
 }
 
 .card-body {
@@ -159,11 +164,25 @@ img.icons:hover {
   text-align: left;
 }
 
-.card img {
+.card-image {
   border-radius: 2%;
+  width: 300px;
+  height: 200px;
 }
 
-/* skills */
+.modal-body {
+  padding: 5%;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.modal-body h5 {
+  font-size: 15px;
+}
+
+.modal-body p {
+  text-align: left;
+}
 
 
 /* hobbies */
