--- a/main.css
+++ b/main.css
@@ -204,7 +204,7 @@ img.icons:hover {
 p.hobbies {
   margin: auto;
   width: 50%;
-  text-align: left;
+  text-align: center;
   font-size: 15px;
 }
 
